trocando id das msg de erro

--- a/settings_user.html
+++ b/settings_user.html
@@ -174,19 +174,19 @@
                 </label>
                 <label for="">Email
                     <input id="email" name="" required="" type="text" placeholder=""/>
-                    <p id="alerta_sobrenome" style="display: none;">O Campo precisa ser preenchido</p>
+                    <p id="alerta_email" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>    
                 <label for="">Telefone
                     <input id="telefone" name="" required="" type="tel" placeholder=""/>
-                    <p id="alerta_usuario" style="display: none;">O Campo precisa ser preenchido</p>
+                    <p id="alerta_telefone" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
                 <label for="">Senha
                     <input id="senhaAlterada" name="" required="" type="password" placeholder=""/>
-                    <p id="alerta_email" style="display: none;">O Campo precisa ser preenchido</p>
+                    <p id="alerta_senha" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
                 <label for="">Confirmar a senha
                     <input id="confirmaSenhaAlterada" name="" required="" type="password" placeholder=""/>
-                    <p id="alerta_email" style="display: none;">O Campo precisa ser preenchido</p>
+                    <p id="alerta_confrimar_senha" style="display: none;">O Campo precisa ser preenchido</p>
                 </label> 
             </section>
             <section class="column-img-btn">
