--- a/settings_user.html
+++ b/settings_user.html
@@ -219,5 +219,6 @@
   </div> 
 </div>
 <script src="script/preloader.js"></script>
+<script src="script/settings_user.js"></script>
 </body>
 </html>
