--- a/production_management.html
+++ b/production_management.html
@@ -28,13 +28,13 @@
   </div>
   <!-- <div id="teste"></div> -->
   <div class="content">
-    <div id="home">
+    <div id="home-content">
       <div class="centro">
         <section class="sidebar">
           <ul class="list-unstyled ps-0">
             <li class="mb-1">
               <div class="sidebar-logo">
-                <h6><a href="home.html" id="home"> SysUnity</a></h6>
+                <h6><a href="home.html" id="home-logo"> SysUnity</a></h6>
               </div>
             </li>
             <li class="mb-1">
@@ -152,7 +152,7 @@
         <h1 id="hello">Produtos</h1>
       </div>
       <ul class="bar-login">
-        <li id="usuario">
+        <li id="usuario-content">
           <div class="btn-group">
             <button class="btn btn-secondary btn-lg dropdown-toggle . shadow-none " type="button"
               data-bs-toggle="dropdown" aria-expanded="false">
