--- a/product_management.html
+++ b/product_management.html
@@ -145,9 +145,7 @@
               <div class="btn-group">
                 <button class="btn btn-secondary btn-lg dropdown-toggle . shadow-none " type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="images/account_circle_black_36dp.svg" alt="" width="20%">
-                    <h6 id="user">
-                      Taila Santos
-                    </h6>
+                    <h6 id="user">Taila Santos</h6>
                 </button>
                 <ul class="dropdown-menu">
                   <li>
