--- a/sale_registration.html
+++ b/sale_registration.html
@@ -212,15 +212,11 @@
 
             <div class="p-t-q-p-t" id="boxsale">
               <div class="product-type-quantity">
-                <label>Produto
+                <label id="label1">Produto
                   <select id="selectProdutoVendas">
-                      <option value=""></option>
-                      <option value="Kibe">Kibe</option>
-                      <option value="Coxinha">Coxinha</option>
-                      <option value="Pastel">Pastel</option>
                   </select>
                 </label>
-                <label>Tipo
+                <label id="labe2">Tipo
                     <select id="selectTipoVendas">
                       <div>
                         <option value=""></option>
