Tentativa de criacao do select

--- a/product_registration.html
+++ b/product_registration.html
@@ -209,9 +209,7 @@
         </div>
         <div class="name-tipe-value" id="boxdate2">
           <div class="name">
-            <label for="">Nome
-              <select id="selectNameProduto">
-              </select>
+            <label id="label1">Nome
               <p id="alertaproduto" style="display: none;">O Campo precisa ser selecionado</p>
             </label>
           </div>
