Funcionamento da tela de produto

--- a/product_registration.html
+++ b/product_registration.html
@@ -209,21 +209,18 @@
         </div>
         <div class="name-tipe-value" id="boxdate2">
           <div class="name">
-            <label for="">Nome
-              <select id="selectNameProduto">
-              </select>
-              <p id="alertaproduto" style="display: none;">O Campo precisa ser selecionado</p>
+            <label id="label1" for="">Nome
             </label>
           </div>
           <div class="tipe">
             <label for="">Tipo
-              <input id="tipe" type="text" placeholder="" />
+              <input id="tipe1" type="text" placeholder="" />
               <p id="alertatipoproduto" style="display: none;">O Campo precisa ser preenchido</p>
             </label>
           </div>
           <div class="value">
             <label for="">Valor
-              <input id="value" type="text" placeholder="" />
+              <input id="value1" type="text" placeholder="" />
               <p id="alertavalorproduto" style="display: none;">O Campo precisa ser preenchido</p>
             </label>
           </div>
