--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <p>
             <label for="usuario_login">Usuário</label>
             <input id="usuario_login" name="usuario_login" required="required" type="text" placeholder="digite seu usuário..."/>
+            <p id="alertausuario" style="display: none;">O Campo precisa ser preenchido</p>
           </p>
           <p>
             <label for="senha_login">Senha</label>
