troca do id da msg de erro do lote

--- a/production_registration.html
+++ b/production_registration.html
@@ -177,7 +177,7 @@
                 <div class="batch">
                   <label>Lote
                     <input id="inputBatch"  type="text" placeholder=""/>
-                    <p id="alertavalorproduto" style="display: none;">O Campo precisa ser preenchido</p>
+                    <p id="alerta_lote" style="display: none;">O Campo precisa ser preenchido</p>
                   </label>
                 </div>
               </div>
