Tela de cadastro de produtos

--- a/product_registration.html
+++ b/product_registration.html
@@ -179,7 +179,7 @@
       <h2>Cadastrar novo produto</h2>
       <div class="form">
         <h5 class="product">O que você deseja cadastrar?</h5>
-        <div class="produto-tipo">
+        <div class="produto-tipo" id="produto-tipo">
           <label>
             <input type="radio" name="question" id="produtoTipo" value="ProdutoTipo">Produto e Tipo
           </label>
