--- a/production_registration.html
+++ b/production_registration.html
@@ -21,13 +21,13 @@
     <img src="images/833.gif" alt="Loading..." />
   </div>
   <div class="content">
-    <div id="home-content">
+    <div id="home">
     <div class="centro">
       <section class="sidebar">
         <ul class="list-unstyled ps-0">
           <li class="mb-1">
             <div class="sidebar-logo">
-              <h6><a href="home.html" id="home-logo"> SysUnity</a></h6>
+              <h6><a href="home.html" id="home"> SysUnity</a></h6>
             </div>
           </li>
           <li class="mb-1">
@@ -139,7 +139,7 @@
             <h1 id="hello">Produtos</h1>            
           </div>
           <ul class="bar-login">
-            <li id="usuario-content">
+            <li id="usuario">
               <div class="btn-group">
                 <button class="btn btn-secondary btn-lg dropdown-toggle . shadow-none " type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="images/account_circle_black_36dp.svg" alt="" width="20%">
@@ -176,8 +176,8 @@
                 </div>
                 <div class="batch">
                   <label>Lote
-                    <input id="inputBatch"  type="text" placeholder=""/>
-                    <p id="alerta_lote" style="display: none;">O Campo precisa ser preenchido</p>
+                    <input id="batch1" type="text" placeholder=""/>
+                    <p id="alertavalorproduto" style="display: none;">O Campo precisa ser preenchido</p>
                   </label>
                 </div>
               </div>
@@ -194,7 +194,7 @@
               </div>
               <div class="days" id="boxday">
                 <label for="">Dias válidos
-                  <input id="inputDays" type="text" placeholder=""/>
+                  <input id="days" type="text" placeholder=""/>
                   <p id="alerta_dias" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
               </div>
@@ -213,7 +213,7 @@
               </div>
               <div class="unity-package">
                 <label class="unity">N°
-                  <input id="inputUnity" type="text" placeholder=""/>
+                  <input id="unity" type="text" placeholder=""/>
                   <p id="alerta_unidade" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
                 <label class="package">Pacotes
