ajustes de layout da sprint_5

--- a/product_registration.html
+++ b/product_registration.html
@@ -188,7 +188,7 @@
           </label>
         </div>
       </div>
-      <div class="form">
+      <div class="form" id="boxproduct">
         <div class="name-tipe-value" id="boxdate">
           <label for="">Nome
             <input id="name" type="text" placeholder="" />
