--- a/production_registration.html
+++ b/production_registration.html
@@ -193,8 +193,8 @@
                 </label>
               </div>
               <div class="days" id="boxday">
+                <input id="days" type="text" placeholder=""/>
                 <label for="">Dias válidos
-                  <input id="days" type="text" placeholder=""/>
                   <p id="alerta_dias" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
               </div>
@@ -212,11 +212,11 @@
                 <label>Quantidade Produzida</label>
               </div>
               <div class="unity-package">
-                <label class="unity">N°
+                <label class="unity">N° de pacotes
                   <input id="unity" type="text" placeholder=""/>
                   <p id="alerta_unidade" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
-                <label class="package">Pacotes
+                <label class="package">Unidades
                   <select id="package01">
                     <option value="5">5</option>
                     <option value="10">10</option>
