Adicionado a validação dos inputs na tela de cadastro do produto

--- a/product_registration.html
+++ b/product_registration.html
@@ -175,6 +175,8 @@
         </li>
       </ul>
     </header>
+
+    <!-- ESCOLHA DO TIPO DE CADASTRO -->
     <section class="registration">
       <h2>Cadastrar novo produto</h2>
       <div class="form">
@@ -188,6 +190,8 @@
           </label>
         </div>
       </div>
+
+      <!-- INPUTS REFERENTES A OPÇÃO PRODUTO-TIPO -->
       <div class="form" id="boxproduct">
         <div class="name-tipe-value" id="boxdate">
           <label for="">Nome
@@ -207,6 +211,8 @@
             </label>
           </div>
         </div>
+
+        <!-- INPUTS REFERENTES A OPÇÃO TIPO -->
         <div class="name-tipe-value" id="boxdate2">
           <div class="name">
             <label id="label1" for="">Nome
@@ -221,10 +227,12 @@
           <div class="value">
             <label for="">Valor
               <input id="value1" type="text" placeholder="" />
-              <p id="alertavalorproduto" style="display: none;">O Campo precisa ser preenchido</p>
+              <p id="alertavalorproduto1" style="display: none;">O Campo precisa ser preenchido</p>
             </label>
           </div>
         </div>
+
+        <!-- BOTÃO DE CADASTRO -->
         <div class="register">
           <div class="btn-group">
             <button class="btn btn-primary" id="btn_cadastrar" type="button">CADASTRAR</button>
@@ -236,6 +244,7 @@
   </div>
   </div>
   </div>
+  <!-- CHAMADA DOS SCRIPTS -->
   <script src="script/preloader.js"></script>
   <script type="module" src="script/product_registration.js"></script>
 </body>
