Criação do bilhete de dados

--- a/product_registration.html
+++ b/product_registration.html
@@ -221,7 +221,7 @@
           <div class="tipe">
             <label for="">Tipo
               <input id="tipe1" type="text" placeholder="" />
-              <p id="alertatipoproduto" style="display: none;">O Campo precisa ser preenchido</p>
+              <p id="alertatipoproduto1" style="display: none;">O Campo precisa ser preenchido</p>
             </label>
           </div>
           <div class="value">
