Disabled do campo de lote

--- a/production_registration.html
+++ b/production_registration.html
@@ -176,7 +176,7 @@
                 </div>
                 <div class="batch">
                   <label>Lote
-                    <input id="batch1" type="text" placeholder=""/>
+                    <input id="batch1" type="text" placeholder="" disabled/>
                     <p id="alertavalorproduto" style="display: none;">O Campo precisa ser preenchido</p>
                   </label>
                 </div>
