--- a/product_management.html
+++ b/product_management.html
@@ -15,6 +15,7 @@
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-database.js"></script>
   <script src="script/database/database-connection.js"></script>
+  <link rel="icon" href="./images/y.png" sizes="any">
 
 </head>
 <body>
