--- a/production_management.html
+++ b/production_management.html
@@ -19,6 +19,7 @@
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-database.js"></script>
   <script src="script/database/database-connection.js"></script>
+  <link rel="icon" href="./images/y.png" sizes="any">
 
 </head>
 
