correção da tela de vendas

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -181,7 +181,7 @@
             role="tab" aria-controls="product" aria-selected="false">Produtos</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="payment-tab" data-bs-toggle="tab" data-bs-target="#payment" type="button"
+          <button class="nav-link" id="payment-tab" data-bs-toggle="tab" data-bs-target="#payment-id" type="button"
             role="tab" aria-controls="payment" aria-selected="false">Forma de Pagamento</button>
         </li>
       </ul>
@@ -239,7 +239,7 @@
                 <label>Total
                   <input id="total" type="text" placeholder="" />
                   <p id="alerta_total" style="display: none;">O Campo precisa ser preenchido</p>
-                  <span>Adicionar</span>
+                  <button type="button">Adicionar</button>
                 </label>
               </div>
             </div>
@@ -296,7 +296,7 @@
                 <label>Valor total
                   <input id="total-value-id" type="text" placeholder="" />
                   <p id="alerta_valortotal" style="display: none;">O Campo precisa ser preenchido</p>
-                  <span>Adicionar</span>
+                  <button type="button">Adicionar</button>
                 </label>
               </div>
             </div>
@@ -307,10 +307,8 @@
               </label>
             </div>
             <div class="register" style="justify-content: space-between;">
-              <div class="btn-group" style="width: 20%;">
-                <button class="btn btn-primary" id="btn_setinha_2" type="button">
-                  << /button>
-              </div>
+              <div class="btn-group" style="width: 10%;">
+                <button class="btn btn-primary" id="btn_setinha_2" type="button"><</div>
               <div class="btn-group">
                 <button class="btn btn-primary" id="btn_cadastrar" type="button">CADASTRAR</button>
               </div>
