adc grafico de linha e rosca - em andamento

--- a/reports_product.html
+++ b/reports_product.html
@@ -157,6 +157,8 @@
         </header>
         
     <canvas id="grafico"></canvas>
+    <canvas id="grafico2"></canvas>
+    <canvas id="grafico3"></canvas>
         
   <script src="script/preloader.js"></script>
   <script type="module" src="script/reports_product.js"></script>
